# raspicam_node

./: 212.29.221.213  CMakeLists.txt  README.md  package.xml
calibrations/: camera.yaml
camera_info/: camera.yaml
include/: RaspiCamControl.h
launch/: auto_shutter.launch  camera_module_v2_640x480_30fps.launch  camera_module_v2_640x480_30fps_autocapture.launch  camera_module_v2_640x480_5fps.launch  fast_shutter.launch
src/: RaspiCamControl.c  raspicam_node.cpp
