<?xml version="1.0"?>
<package format="2">
  <name>raspicam_node</name>
  <version>1.0.1</version>
  <description>ROS Package to access the raspberry pi camera</description>
  
  <maintainer email="ganbold_0324@yahoo.com">Ganbold Davaajav</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <depend>compressed_image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libraspberrypi0</depend>
  <build_depend>libraspberrypi-dev</build_depend>

  <export>  
  </export>
</package>
